Fix restarting timer from onTriggered handler.

Set the running property to false before calling the triggered handler
when a timer finishes so it does not appear to still be running and
can be restarted by setting the running property to true.

Task-number: QTBUG-22004
Change-Id: I840efa30f5b7ad7d0cda96803d4898be3f390705
Reviewed-by: Martin Jones <martin.jones@nokia.com>